# HiveFlow

./: .gitignore  README.md
docs/: Architecture HLD.md  HiveFlow Project Summary.md  HiveFlow project structure.md
hiveflow-core/: Cargo.toml  build.rs
hiveflow-core/src/: lib.rs  main.rs  proto.rs
hiveflow-core/src/cell/: mod.rs
proto/: hiveflow.proto
