[package]
name = "hiveflow-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# For cells filesystem
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
hex = "0.4"
tempfile = "3.8"


# P2P networking
libp2p = { version = "0.52", features = [
    "tcp",
    "websocket",
    "dns",
    "noise",
    "yamux",
    "kad",
    "identify",
    "ping"
]}

# Protocol buffers
prost = "0.12"
tonic = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
tempfile = "3.8"